[package]
name = "pigskit-restful-server"
version = "0.1.0"
authors = ["davidwu <david6906817@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
tokio-postgres = { version = "0.5", features = ["with-uuid-0_8"] }
postgres-types = { version = "0.1", features = ["derive"] }
bb8 = "0.4"
bb8-postgres = "0.4"
tokio = { version = "0.2", features = ["macros"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
clap = "2.33"
log = "0.4"
env_logger = "0.7"
serde = "1.0.0"
serde_derive = "1.0.0"